6.10 优化有关菜单的接口功能
